2000-02-14  Michael Natterer  <mitch@gimp.org>

	* app/color_area.c
	* app/color_notebook.[ch]
	* app/color_panel.c
	* app/colormap_dialog.p.h
	* app/palette.c: s/ColorNotebookP/ColorNotebook*/g

Sun Feb 13 23:23:40 GMT 2000 Nick Lamb <njl195@zepler.org.uk>

	* app/palette.c: Slightly better behaviour (no more horiz scroll)

2000-02-13  Michael Natterer  <mitch@gimp.org>

	* po/POTFILES.in
	* app/Makefile.am
	* app/buildmenu.[ch]: removed.

	* app/blend.c
	* app/brush_select.c
	* app/curves.c
	* app/histogram_tool.c
	* app/layers_dialog.c
	* app/lc_dialog.c
	* app/levels.c
	* app/paint_options.h
	* app/paintbrush.c
	* app/tool_options.c: use the libgimp option menu
	constructor. Removed paint_mode_menu_set_history().

	* app/colormap_dialog.i.c
	* app/colormap_dialog.p.h: use a popup menu as in the palette
	dialog instead of a pulldown menu.

	* app/channels_dialog.c: made color dnd to a channel widget work
	again.

	* libgimp/gimpwidgets.[ch]: new function
	gimp_option_menu_set_history() which sets the history according to
	user_data as passed to gimp_option_menu_new().

Sun Feb 13 20:34:15 CET 2000  Sven Neumann <sven@gimp.org>

	* app/about_dialog.c
	* app/app_procs.c
	* app/install.c: check if fonts could be loaded instead of
	simply crashing

Sun Feb 13 15:23:03 CET 2000  Sven Neumann <sven@gimp.org>

	* app/channel_dialog.c
	* app/layers_dialog.c: provided a proper fix for bug #2518

2000-02-13  Michael Natterer  <mitch@gimp.org>

	* app/brush_select.c
	* app/paint_options.h
	* app/tool_options.c: use new function
	paint_mode_menu_set_paint_mode() instead of
	gtk_option_menu_set_history() because the order of paint modes in
	the menu is different from the one in the LayerModeEffects enum
	(fixes bug #6190). Create the menu with the libgimp menu
	constructor.

Sun Feb 13 13:03:38 CET 2000  Sven Neumann <sven@gimp.org>

	* app/gimpui.c
	* plug-ins/common/max_rgb.c: tupos

Sun Feb 13 12:08:02 CET 2000  Sven Neumann <sven@gimp.org>
